<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.VacationDetails">

    <!-- ScrollView Section for form elements -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/excursionrecyclerview"
        app:layout_constraintHeight_percent="0.45"
        android:background="@drawable/gradient_background_odd"  >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/title"
                    android:layout_height="50dp"
                    android:layout_width="wrap_content"
                    android:padding="10dp"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/titletext"
                    android:autofillHints="name"
                    android:hint="@string/click_here_to_edit"
                    android:layout_height="50dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:padding="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textColorHint="#80FFFFFF"/>
            </LinearLayout>

            <!-- Hotel Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/hotel"
                    android:layout_height="50dp"
                    android:layout_width="wrap_content"
                    android:padding="10dp"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/hoteltext"
                    android:hint="@string/click_here_to_edit"
                    android:layout_height="50dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:padding="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textColorHint="#80FFFFFF"/>
            </LinearLayout>

            <!-- Start Date Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonStartDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.55"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="@string/select_start_date"
                    app:strokeColor="@android:color/white"
                    app:strokeWidth="3dp"
                    app:cornerRadius="40dp"
                    android:backgroundTint="@color/endGradient" />

                <TextView
                    android:id="@+id/textViewStartDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:text="@string/start_date_not_selected"
                    android:padding="8dp"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="start|center_vertical"
                    android:singleLine="true" />
            </LinearLayout>

            <!-- End Date Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonEndDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.55"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="@string/select_end_date"
                    app:strokeColor="@android:color/white"
                    app:strokeWidth="3dp"
                    app:cornerRadius="40dp"
                    android:backgroundTint="@color/endGradient" />

                <TextView
                    android:id="@+id/textViewEndDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:text="@string/end_date_not_selected"
                    android:padding="8dp"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="start|center_vertical"/>
            </LinearLayout>

            <!-- Save Button Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonSaveVacation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="@string/save_vacation"
                    app:strokeColor="@android:color/white"
                    app:strokeWidth="3dp"
                    app:cornerRadius="40dp"
                    android:backgroundTint="@color/endGradient" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <!-- Add Excursion Message -->
    <TextView
        android:id="@+id/addExcursionMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_an_excursion"
        android:textSize="18sp"
        android:textColor="@color/startGradient"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:paddingEnd="150dp"
        app:layout_constraintBottom_toTopOf="@id/floatingActionButton2"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="4dp" />

    <!-- FloatingActionButton to add a new excursion -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_menu_add"
        android:contentDescription="@string/add_excursion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"/>

    <!-- RecyclerView Section for excursions -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/excursionrecyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/scrollView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
