...
        android:text="@string/add_vacation_message"
        android:textSize="18sp"
        android:textColor="@color/startGradient"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:paddingEnd="150dp"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="4dp"/>

    <!-- FloatingActionButton to add a new vacation -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
...
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"/>

    <!-- RecyclerView to display vacations -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/addVacationMessage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
