...
    <string name="select_end_date">Select End Date</string>
    <string name="end_date_not_selected">End Date: Not Selected</string>
    <string name="add_excursion">Add Excursion</string>
    <string name="excursion_date">Excursion Date</string>
    <string name="vacation_location">Vacation Location</string>
    <string name="add_sample_code">Add Sample Code</string>
    <string name="delete_vacation">Delete Vacation</string>
    <string name="share_vacation_details">Share Vacation Details</string>
    <string name="set_start_alert">Set Start Alert</string>
    <string name="set_end_alert">Set End Alert</string>
</resources>

